Quick accessibility check revealed color contrast issues, this fixes them

--- a/app/static/css/_about.scss
+++ b/app/static/css/_about.scss
@@ -25,11 +25,11 @@
 }
 
 .about__link {
-    color: constants.$light-blue;
+    color: constants.$dark-blue;
     font-weight: constants.$font-weight-bold;
 
     &:visited {
-        color: constants.$light-blue;
+        color: constants.$dark-blue;
     }
 
     &:hover {
