--- a/app/static/css/_nav.scss
+++ b/app/static/css/_nav.scss
@@ -26,6 +26,7 @@
     align-self: flex-end;
     color: constants.$light-blue;
     font-weight: constants.$font-weight-bold;
+    font-size: 1.2rem;
 
     &:visited {
         color: constants.$light-blue;
